fully updated Twitter App with build tools and new DB